# test_openvino

./: CMakeLists.txt  README.md
openvino_2022.3.0/lib/intel64/Release/: libtbb.dylib
ultralytics_yolov3/: ultralytics_yolov3.cpp  yolov3-tiny-sim.mapping  yolov3-tiny-sim.xml
ultralytics_yolov3/fp32/: yolov3-tiny-sim.mapping  yolov3-tiny-sim.xml
